uclamp_assist: Refactor and implement
This is based on:
https://github.com/Pzqqt/android_kernel_xiaomi_whyred/commit/7725cb5bc171d1658eedfeb2ce6074288864e642

With the following modifications:
- Completely remove CPUSET_ASSIST dependency
- Fix potential bootloop issues on some devices
- Place the Kconfig entry appropriately
- Improve code styling and readability

Signed-off-by: Edwiin Kusuma Jaya <kutemeikito0905@gmail.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -793,6 +793,12 @@ config UCLAMP_BUCKETS_COUNT
 
 endmenu
 
+config UCLAMP_ASSIST
+	bool "UClamp configuration helper"
+	depends on CPUSETS && ANDROID && UCLAMP_TASK && UCLAMP_TASK_GROUP
+	help
+	  This option enabled in-kernel uclamp setting overrides.
+
 #
 # For architectures that want to enable the support for NUMA-affine scheduler
 # balancing logic:
