--- a/arch/arm64/configs/ginkgo_defconfig
+++ b/arch/arm64/configs/ginkgo_defconfig
@@ -5499,8 +5499,8 @@ CONFIG_PANIC_TIMEOUT=-1
 # CONFIG_WW_MUTEX_SELFTEST is not set
 # CONFIG_STACKTRACE is not set
 # CONFIG_WARN_ALL_UNSEEDED_RANDOM is not set
-CONFIG_HAVE_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_BUGVERBOSE=y
+# CONFIG_HAVE_DEBUG_BUGVERBOSE is not set
+# CONFIG_DEBUG_BUGVERBOSE is not set
 
 #
 # RCU Debugging
@@ -5721,7 +5721,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 # Compression
 #
-CONFIG_CRYPTO_DEFLATE=y
+# CONFIG_CRYPTO_DEFLATE is not set
 CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_842 is not set
 CONFIG_CRYPTO_LZ4=y
