ARM64/configs: ginkgo: regenerate defconfig

--- a/arch/arm64/configs/ginkgo_defconfig
+++ b/arch/arm64/configs/ginkgo_defconfig
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-流れ/Kazuya-overdrive"
+CONFIG_LOCALVERSION="-和也/Kazuya+"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_LOCALVERSION_BRANCH_SHA is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -128,7 +128,8 @@ CONFIG_RCU_NEED_SEGCBLIST=y
 CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
-# CONFIG_RCU_BOOST is not set
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_BOOST_DELAY=0
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
@@ -699,7 +700,7 @@ CONFIG_RANDOMIZE_BASE=y
 #
 # Boot options
 #
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="rcutree.kthread_prio=99"
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
@@ -5725,7 +5726,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_842 is not set
 CONFIG_CRYPTO_LZ4=y
-CONFIG_CRYPTO_LZ4HC=y
+# CONFIG_CRYPTO_LZ4HC is not set
 CONFIG_CRYPTO_ZSTD=y
 
 #
@@ -5872,6 +5873,6 @@ CONFIG_UCLAMP_ASSIST=y
 #
 # Adreno Idler
 CONFIG_ADRENO_IDLER=y
-
+#
 # oplus mm hacks
 CONFIG_OPLUS_MM_HACKS=y
