--- a/arch/arm64/configs/ginkgo_defconfig
+++ b/arch/arm64/configs/ginkgo_defconfig
@@ -5876,3 +5876,21 @@ CONFIG_ADRENO_IDLER=y
 #
 # oplus mm hacks
 CONFIG_OPLUS_MM_HACKS=y
+#
+# enable KernelSU + SuSFS 1.5.5+
+#
+CONFIG_KSU=y
+CONFIG_KSU_SUSFS=y
+CONFIG_KSU_SUSFS_SU=y
+CONFIG_KSU_SUSFS_SUS_PATH=y
+CONFIG_KSU_SUSFS_SPOOF_UNAME=y
+CONFIG_KSU_SUSFS_ENABLE_LOG=y
+CONFIG_KSU_SUSFS_TRY_UMOUNT=y
+CONFIG_KSU_SUSFS_SUS_MOUNT=y
+#
+# manual integration
+#
+# CONFIG_KPROBES is not set
+# CONFIG_HAVE_KPROBES is not set
+# CONFIG_KPROBE_EVENTS is not set
+# CONFIG_KPROBE_EVENT is not set
